--- a/deployment-dev.yaml
+++ b/deployment-dev.yaml
@@ -14,12 +14,13 @@ spec:
       labels:
         app: flask
     spec:
+      imagePullSecrets:              # ✅ ADD THIS
+        - name: docker-creds         # ✅ This matches your secret
       containers:
         - name: flask
-          image: cithit/perezi3:latest   #<-----change this!!!!
+          image: cithit/perezi3:latest
           ports:
             - containerPort: 5000
-
 ---
 apiVersion: v1
 kind: Service
@@ -27,10 +28,10 @@ metadata:
   name: flask-service
 spec:
   type: LoadBalancer 
-  loadBalancerIP: 10.48.10.189     #<-----change this!!!!                             
+  loadBalancerIP: 10.48.10.189                             
   ports:
-  - protocol: TCP
-    port: 5000
-    targetPort: 5000
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
   selector:
-    app: flask 
+    app: flask
